# kubectl-search

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
src/: cli.rs  logging.rs  main.rs  output.rs
src/k8s/: mod.rs
src/usecase/: mod.rs  values.rs
